@@ -16,8 +16,6 @@
 
 package com.android.adservices.service.adselection;
 
-import static android.adservices.adselection.SignedContextualAdsFixture.PLACEHOLDER_SIGNATURE;
-
 import static com.android.adservices.service.adselection.AdSelectionConfigValidator.DECISION_LOGIC_URI_TYPE;
 import static com.android.adservices.service.adselection.AdSelectionConfigValidator.TRUSTED_SCORING_SIGNALS_URI_TYPE;
 
@@ -36,6 +34,7 @@ import android.adservices.common.AdTechIdentifier;
 import android.adservices.common.CommonFixture;
 import android.net.Uri;
 
+import com.android.adservices.common.SdkLevelSupportRule;
 import com.android.adservices.service.Flags;
 import com.android.adservices.service.FlagsFactory;
 import com.android.adservices.service.common.AdDataValidator;
@@ -49,6 +48,7 @@ import com.android.adservices.service.common.ValidatorUtil;
 import com.google.common.collect.ImmutableList;
 
 import org.junit.Before;
+import org.junit.Rule;
 import org.junit.Test;
 
 import java.util.HashMap;
@@ -107,6 +107,9 @@ public class AdSelectionConfigValidatorTest {
 
     private Flags mFlags;
     private PrebuiltLogicGenerator mPrebuiltLogicGenerator;
+
+    @Rule(order = 0)
+    public final SdkLevelSupportRule sdkLevel = SdkLevelSupportRule.forAtLeastS();
 
     @Before
     public void setup() {
@@ -351,7 +354,7 @@ public class AdSelectionConfigValidatorTest {
         Map<AdTechIdentifier, SignedContextualAds> buyerContextualAds = new HashMap<>();
         AdTechIdentifier buyer2 = CommonFixture.VALID_BUYER_2;
         SignedContextualAds contextualAds2 =
-                SignedContextualAdsFixture.generateSignedContextualAds(
+                SignedContextualAdsFixture.aContextualAdsWithEmptySignatureBuilder(
                                 buyer2, ImmutableList.of(100.0, 200.0))
                         .setDecisionLogicUri(
                                 CommonFixture.getUri(
@@ -359,7 +362,9 @@ public class AdSelectionConfigValidatorTest {
                         .build();
         buyerContextualAds.put(buyer2, contextualAds2);
         AdSelectionConfig adSelectionConfig =
-                mAdSelectionConfigBuilder.setBuyerSignedContextualAds(buyerContextualAds).build();
+                mAdSelectionConfigBuilder
+                        .setPerBuyerSignedContextualAds(buyerContextualAds)
+                        .build();
         AdSelectionConfigValidator adSelectionConfigValidator =
                 new AdSelectionConfigValidator(
                         mPrebuiltLogicGenerator, new FrequencyCapAdDataValidatorImpl());
@@ -380,7 +385,7 @@ public class AdSelectionConfigValidatorTest {
         AdTechIdentifier buyer2 = CommonFixture.VALID_BUYER_2;
         ImmutableList<Double> bids = ImmutableList.of(100.0, 200.0);
         SignedContextualAds contextualAds2 =
-                SignedContextualAdsFixture.generateSignedContextualAds(buyer2, bids)
+                SignedContextualAdsFixture.aContextualAdsWithEmptySignatureBuilder(buyer2, bids)
                         .setDecisionLogicUri(
                                 CommonFixture.getUri(buyer2, BUYER_BIDDING_LOGIC_URI_PATH))
                         .setAdsWithBid(
@@ -397,7 +402,9 @@ public class AdSelectionConfigValidatorTest {
         // Creating ads which have a render Uri with a different buyer
         buyerContextualAds.put(buyer2, contextualAds2);
         AdSelectionConfig adSelectionConfig =
-                mAdSelectionConfigBuilder.setBuyerSignedContextualAds(buyerContextualAds).build();
+                mAdSelectionConfigBuilder
+                        .setPerBuyerSignedContextualAds(buyerContextualAds)
+                        .build();
         AdSelectionConfigValidator adSelectionConfigValidator =
                 new AdSelectionConfigValidator(
                         mPrebuiltLogicGenerator, new FrequencyCapAdDataValidatorImpl());
@@ -441,23 +448,20 @@ public class AdSelectionConfigValidatorTest {
                         CommonFixture.VALID_BUYER_1, 0);
 
         List<AdWithBid> adsWithBids =
-                List.of(new AdWithBid(adDataWithExceededFrequencyCapLimits, 100.0));
+                ImmutableList.of(new AdWithBid(adDataWithExceededFrequencyCapLimits, 100.0));
 
         Map<AdTechIdentifier, SignedContextualAds> buyerContextualAds = new HashMap<>();
         buyerContextualAds.put(
                 CommonFixture.VALID_BUYER_1,
-                new SignedContextualAds.Builder()
-                        .setBuyer(CommonFixture.VALID_BUYER_1)
-                        .setDecisionLogicUri(
-                                CommonFixture.getUri(
-                                        CommonFixture.VALID_BUYER_1,
-                                        SignedContextualAdsFixture.DECISION_LOGIC_FRAGMENT))
+                SignedContextualAdsFixture.aContextualAdsWithEmptySignatureBuilder(
+                                CommonFixture.VALID_BUYER_1)
                         .setAdsWithBid(adsWithBids)
-                        .setSignature(PLACEHOLDER_SIGNATURE)
                         .build());
 
         AdSelectionConfig adSelectionConfig =
-                mAdSelectionConfigBuilder.setBuyerSignedContextualAds(buyerContextualAds).build();
+                mAdSelectionConfigBuilder
+                        .setPerBuyerSignedContextualAds(buyerContextualAds)
+                        .build();
 
         AdSelectionConfigValidator adSelectionConfigValidator =
                 new AdSelectionConfigValidator(
